# algomath

./: README.md  setup.cfg
release/: make_release
